Camera Tracks in the Dope Sheet can't be deselected #40354

Closed
opened 2014-05-25 11:26:17 +02:00 by Thomas Beck · 13 comments
Member

Hi Sergey,

System Information
Ubuntu Linux64, 16Gb Ram, 2* GTX560TI oc 2GB each

Blender Version
Tried 2.70a and hash 5811076, both are buggy

Short description of error
On the Motion Tracking layout I tracked several tracks. Now I want to select individual tracks in the graph editor or the Dope Sheet. When I select one track after another all are getting highlighted in the Motion Clip editor - so it's additive without holding any control or shift key. I would expect that we would only highlight the one that we are clicking

Exact steps for others to reproduce the error
14_CameraSolve_End.blend
Open the supplied blend and select different tracks in the graph editor or the dope sheet. All selected items are highlighted - even if you deselect them by clicking again on their curve or name they are not deselected in the Movie Clip editor.

I would propose that we follow the normal Blender behavior here : Selecting via shift should select multiple tracks, without shift should only the current one be highlighted.

Many greetings,
Thomas

Hi Sergey, **System Information** Ubuntu Linux64, 16Gb Ram, 2* GTX560TI oc 2GB each **Blender Version** Tried 2.70a and hash 5811076, both are buggy **Short description of error** On the Motion Tracking layout I tracked several tracks. Now I want to select individual tracks in the graph editor or the Dope Sheet. When I select one track after another all are getting highlighted in the Motion Clip editor - so it's additive without holding any control or shift key. I would expect that we would only highlight the one that we are clicking **Exact steps for others to reproduce the error** [14_CameraSolve_End.blend](https://archive.blender.org/developer/F90687/14_CameraSolve_End.blend) Open the supplied blend and select different tracks in the graph editor or the dope sheet. All selected items are highlighted - even if you deselect them by clicking again on their curve or name they are not deselected in the Movie Clip editor. I would propose that we follow the normal Blender behavior here : Selecting via shift should select multiple tracks, without shift should only the current one be highlighted. Many greetings, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Beck 2014-05-25 11:26:17 +02:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

This issue was referenced by 3131b5d9dd

This issue was referenced by 3131b5d9ddec5bdc89d8019080e2a9d3bbfc919f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3131b5d9dd.

Closed by commit 3131b5d9dd.
Author
Member

Hi Sergey,
unfortunately this is only solving part of the problem. The issue is still present:

Uncheck show_graph_only_selected and then

  • Select a curve in the Graph Editor, select another one without shift -> Both will be selected.
  • Select a Track in the dopesheet and another one after that -> Both are being selected
    This should only happen when we hold down the shift key. In all other cases the selection should deselect all other previously selected items...

Do you see the issue? If yes, please reopen it - I won't if you consider it to be correct.

Cheers, Thomas

Hi Sergey, unfortunately this is only solving part of the problem. The issue is still present: Uncheck show_graph_only_selected and then - Select a curve in the Graph Editor, select another one without shift -> Both will be selected. - Select a Track in the dopesheet and another one after that -> Both are being selected This should only happen when we hold down the shift key. In all other cases the selection should deselect all other previously selected items... Do you see the issue? If yes, please reopen it - I won't if you consider it to be correct. Cheers, Thomas
Author
Member

Hi Sergey,
sorry for reporting a second issue but finishing my book stops me from looking into those issues myself (as you may have guessed I'm at the Motion Tracking chapter now ;))

Could you please confirm that scaling masks on the supplied file is acting as if the center of the mask would be way left of the mask? No matter what pivot point I choose, every scale operation will scale the mask to the left. If you confirm that I'll open up another bug report for this if you'd like to ...

Cheers, Thomas

Hi Sergey, sorry for reporting a second issue but finishing my book stops me from looking into those issues myself (as you may have guessed I'm at the Motion Tracking chapter now ;)) Could you please confirm that scaling masks on the supplied file is acting as if the center of the mask would be way left of the mask? No matter what pivot point I choose, every scale operation will scale the mask to the left. If you confirm that I'll open up another bug report for this if you'd like to ... Cheers, Thomas

I see inconsistency but not an issue. Here it's more a historical thing, dopesheet was supposed to be used in a one way but then was moved to other things. I've asked Sebastian to re-view behavior here from current pipeline POV and don't want to start changing behavior so close to the RC.

Please don't mix different reports into a single one. If you've got .blend file where mask is not using proper pivot please make a new report and attach that file.

I see inconsistency but not an issue. Here it's more a historical thing, dopesheet was supposed to be used in a one way but then was moved to other things. I've asked Sebastian to re-view behavior here from current pipeline POV and don't want to start changing behavior so close to the RC. Please don't mix different reports into a single one. If you've got .blend file where mask is not using proper pivot please make a new report and attach that file.
Author
Member

Ok, Sergey I'll talk with Sebastian then and we'll look into it for 2.72.

The mask scale thing is happening in the file that I appended to this report, therefore I asked you to confirm it in this report - but I'll open another bug report then... makes it easier to track the progress..

Ok, Sergey I'll talk with Sebastian then and we'll look into it for 2.72. The mask scale thing is happening in the file that I appended to this report, therefore I asked you to confirm it in this report - but I'll open another bug report then... makes it easier to track the progress..

I didn't see masks in the file you've attached to this report.

I didn't see masks in the file you've attached to this report.
Author
Member

When I create a closed mask in this file (by Ctrl-LMB and alt+c on it) the resulting mask has the behaviour I described.

When I create a closed mask in this file (by Ctrl-LMB and alt+c on it) the resulting mask has the behaviour I described.

I've been looking into possible issues. Found that masks transform with display aspect (or pixel aspect) != 1:1 would fail. Fixed now. Please give it an intense testing with builds newer than dcf2a07.

I've been looking into possible issues. Found that masks transform with display aspect (or pixel aspect) != 1:1 would fail. Fixed now. Please give it an intense testing with builds newer than dcf2a07.
Author
Member

Thanks for investigating it Sergey! Will test extensively and report back in IRC...CU there!

Thanks for investigating it Sergey! Will test extensively and report back in IRC...CU there!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40354
No description provided.