Fix T40354: Camera Tracks in the Dope Sheet can't be deselected